fix: escaped strong tag on mobile nav

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -183,3 +183,8 @@ time {
   opacity: 0.8;
   font-size: 14px;
 }
+
+.VPNavBarMenu .VPNavBarMenuLink,
+.VPNavScreenMenu .VPNavScreenMenuLink {
+  font-weight: 600;
+}
